# engine2

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/plane/: plane.mtl
shaders/: cubemap_viewer.frag  cubemap_viewer.vert  diffuse.frag  diffuse.geo  diffuse.vert  equirectangular_to_cubemap.frag  equirectangular_to_cubemap.vert  frag.frag  light.frag  light.vert  light_point_shadow_map.frag  light_point_shadow_map.geo  light_point_shadow_map.vert  normal.frag  normal.geo  normal.vert  outline.frag  outline.vert  postprocess.frag  postprocess.vert  skybox.frag  skybox.vert  tone_mapping_aces.glsl  unlit_single_color.frag  unlit_single_color.vert  vertex.vert
shaders/deferred_rendering/: dr_pass_bloom_downsample_by_half.frag  dr_pass_bloom_downsample_by_half.vert  dr_pass_bloom_upsample_by_half.frag  dr_pass_gbuffers.frag  dr_pass_gbuffers.vert  dr_pass_lighting.frag  dr_pass_lighting.vert  light.glsl
src/: common.h  conf.h  create_scene.cpp  create_scene.h  engine.h  entity_from_model.cpp  game_loop.cpp  load.cpp  load.h  main.cpp
src/camera/: camera.cpp  camera.h
src/components/: base_component.cpp  base_component.h  camera_component.cpp  camera_component.h  deferred_renderer_component.cpp  deferred_renderer_component.h  editor_selected_component.cpp  editor_selected_component.h  light_component.cpp  light_component.h  material_component.cpp  material_component.h  outline_component.cpp  skybox_component.cpp  skybox_component.h
src/core/: editor_selected_entity.cpp  editor_selected_entity.h  entity.cpp  entity.h  fmt_vec.hpp  game_loop.cpp  game_loop.h  input.cpp  input.hpp  locator.h  noncopyable.h  profiler.cpp  profiler.h  profiler_macro.h  reflection.cpp  reflection.h  resource_cache.h  transform.cpp  transform.h
src/framebuffer/: framebuffer.cpp  framebuffer.h
src/glfw/: glfw.cpp  glfw.h
src/graphics/: cube_map.cpp  cube_map.h  cube_map_cache.cpp  cube_map_cache.h  deferred_renderer.cpp  deferred_renderer.h  deferred_renderer_cache.cpp  deferred_renderer_cache.h  framebuffer.cpp  framebuffer.h  framebuffer_cache.cpp  framebuffer_cache.h  mesh.cpp  mesh.h  mesh_cache.cpp  mesh_cache.h  mesh_from.cpp  mesh_from_cube.cpp  mesh_from_quad.cpp  mesh_loader.cpp  mesh_loader.h  renderer_context.h  shader_cache.cpp  shader_cache.h  shader_program.cpp  shader_program.h  shader_source.cpp  shader_source.h  skybox.cpp  skybox.h  texture.cpp  texture.h  texture_cache.cpp  texture_cache.h  texture_image.cpp  texture_image.h
src/graphics/deferred_renderer/: deferred_renderer.cpp  deferred_renderer.h  deferred_renderer_cache.cpp  deferred_renderer_cache.h  deferred_renderer_pass_bloom.cpp  deferred_renderer_pass_geometry.cpp  deferred_renderer_pass_gizmo.cpp  deferred_renderer_pass_opaque.cpp  deferred_renderer_pass_outline.cpp  deferred_renderer_pass_postprocess.cpp  deferred_renderer_pass_skybox.cpp
src/graphics/opengl/: framebuffer.cpp  framebuffer.h  image.cpp  image.h  mesh.h  model.cpp  model.h  shader_loader.cpp  shader_loader.h  shader_program.cpp  shader_program.h  shader_source.cpp  shader_source.h  skybox.cpp  skybox.h  texture.h  texture_loader.cpp  texture_loader.h  vertex_array_object.cpp  vertex_array_object.h  vertex_buffer_object.cpp  vertex_buffer_object_from_quad.cpp
src/graphics/texture/: texture.cpp  texture.h  texture_cache.cpp  texture_cache.h  texture_from_file_cubemap.cpp  texture_image.cpp  texture_image.h  texture_internal.cpp  texture_internal.h
src/gui/: gui.cpp  gui.h
src/mesh/: mesh.cpp  mesh.h
src/model/: mesh.cpp  mesh.h  model.cpp  model.h
src/node/: node.cpp  node.h
src/opengl/: opengl.cpp  opengl.h
src/platform/: glfw.cpp  glfw.h  opengl.cpp  opengl.h
src/scene/: camera.h  component.cpp  component.h  cube.h  entity_from_model.cpp  entity_from_model.h  game_object.cpp  game_object.h  game_object_from_model.cpp  game_object_from_model.h  light.h  node.h  scene.cpp  scene.h
src/scene/components/: base_component.cpp  base_component.h  camera_component.cpp  camera_component.h  light_component.cpp  light_component.h  material_component.cpp  material_component.h  name_component.cpp  name_component.h  outline_component.cpp  outline_component.h  player_component.cpp  player_component.h  renderer_component.cpp  renderer_component.h  skybox_component.cpp  skybox_component.h  transform_component.cpp  transform_component.h
src/shader/: shader_program.cpp  shader_program.h  shader_source.cpp  shader_source.h
src/skybox/: skybox.cpp  skybox.h
src/systems/: camera_system.cpp  deferred_rendering.cpp  draw_identify.cpp  draw_light_gizmo.cpp  draw_outline.cpp  draw_shadow_maps.cpp  draw_skybox.cpp  should_close_system.cpp  systems.h
src/texture/: image.cpp  image.h  texture.cpp  texture.h
src/to_be_deleted/: vertex_array_object.cpp  vertex_buffer_object.cpp  vertex_buffer_object.h
src/ui/: gui.cpp  gui.h  imgui.h  ui.cpp  ui.h  ui_draw_widget_transform.cpp  ui_gizmo_manipulate_3d_object.cpp  ui_internal.h  ui_window_entity_editor.cpp  ui_window_framebuffer_viewer.cpp  ui_window_hierarchy.cpp  ui_window_input_debugger.cpp  ui_window_scene.cpp  ui_window_system.cpp  utils.cpp  utils.h
src/ui/entity_editor/: entity_editor.h  entity_property_editor.cpp  ui_window_entity_editor.cpp
src/ui/ui_window_profiler/: ui_window_profiler.cpp
src/utils/: opengl_handle_to_pointer.cpp  opengl_handle_to_pointer.h  platform_info.cpp  platform_info.h  read_file_to_string.cpp  read_file_to_string.h  singular_span.h  type_index.h
src/vertex_array_object/: vertex_array_object.cpp  vertex_array_object.h
src/vertex_buffer_object/: vertex_buffer_object.cpp  vertex_buffer_object.h  vertex_buffer_object_from_cube.cpp  vertex_buffer_object_from_quad.cpp
vendors/glad/: CMakeLists.txt
vendors/glad/glad/: glad.cpp  glad.h  khrplatform.h
vendors/imgui/: CMakeLists.txt
vendors/imgui/imgui/: imgui.cpp
vendors/stb_image/: CMakeLists.txt
vendors/stb_image/stb_image/: stb_image.cpp  stb_image.h
vendors/stb_include/: CMakeLists.txt
vendors/stb_include/stb_include/: stb_include.cpp  stb_include.h
(+11 files in other folders)
